# krye.io

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Dockerfile  Gemfile  README.md  _config.yml  aubergine-flask.md  fond-cause.md  global.css  index.css  index.html  post.css  render_to_pdf.sh  resume-body.css  resume-sidebar.css  resume.css  resume.html  site.rb  uppity-sheep.md
.circleci/: config.yml
.github/: CODEOWNERS
_drafts/: Aaand-were-live.md  firewalling-with-iptables.md  semver.md  ssh-reverse-tunneling.md
_layouts/: base.html  post.html  redirect.html
_posts/: 2019-06-17-firewalling-with-iptables.md  2020-01-30-ssh-multiplexing.md
public/: fonts.css  index.css  index.html  palette.css  resume-body.css  resume-sidebar.css  resume.css  resume.html
src/: lib.rs  main.rs  telemetry.rs
src/server/: context.rs
src/telemetry/: sentry_error_reporter_fairing.rs
tests/: can_navigate_from_root_to_resume.rs
views/: base.html.tera  index.html.erb  index.html.tera  resume.html.hbs  resume.html.tera
