[package]
name = 'krye_io'
version = '0.0.0'
authors = ['Kristofer Rye <kristofer.rye@gmail.com>']
publish = false
edition = '2018'

[dependencies]
rocket = { version = '~0.4.0' }
sentry = '~0.13.0'

[dependencies.rocket_contrib]
version = '~0.4.0'
default-features = false
features = ['handlebars_templates', 'serve']
