[package]
name = 'krye_io'
version = '0.0.0'
authors = ['Kristofer Rye <kristofer.rye@gmail.com>']
publish = false
edition = '2018'

[dependencies]
rocket = { version = '~0.4.0' }
sentry = '~0.15.0'
serde = '~1.0.89'

[dependencies.rocket_contrib]
version = '~0.4.0'
default-features = false
features = ['tera_templates', 'serve']

[dev-dependencies]
fantoccini = '~0.11.7'
futures = '~0.1.25'
tokio = '~0.1.18'
